--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "test1": "jest",
     "test": "jest --runInBand",
-    "cucumber": "cucumber-js"
+    "cucumber": "cucumber-js",
+    "cucumder2": "cucumber-js --tags=@only"
   },
   "author": "Rasskazova",
   "license": "ISC",
   "dependencies": {
-    "chai": "^4.3.4",
+    "chai": "^4.5.0",
     "cucumber": "^7.0.0-rc.0",
     "jest": "^27.3.1",
     "jest-puppeteer": "^6.0.0",
