--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "test1": "jest",
     "test": "jest --runInBand",
     "cucumber": "cucumber-js",
-    "cucumder2": "cucumber-js --tags=@only"
+    "cucumber2": "cucumber-js --tags=@only"
   },
   "author": "Rasskazova",
   "license": "ISC",
   "dependencies": {
     "chai": "^4.5.0",
-    "cucumber": "^7.0.0-rc.0",
     "jest": "^27.3.1",
     "jest-puppeteer": "^6.0.0",
     "puppeteer": "^13.7.0"
+  },
+  "devDependencies": {
+    "cucumber": "^6.0.7"
   }
 }
